[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/enemies/spitter/Spitter.png" type="Texture" id=1]
[ext_resource path="res://src/enemies/Spitter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 13.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "spit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[node name="Spitter" type="StaticBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 8 )
texture = ExtResource( 1 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 4 )
anims/idle = SubResource( 3 )
anims/spit = SubResource( 2 )

[node name="SpitTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="LeftShot" type="Position2D" parent="."]
position = Vector2( -3, 14 )

[node name="RightShot" type="Position2D" parent="."]
position = Vector2( 4, 14 )

[node name="PreStartTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpitTimer" to="." method="_on_SpitTimer_timeout"]
[connection signal="timeout" from="PreStartTimer" to="." method="_on_PreStartTimer_timeout"]
